<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.user.SetUserInformationActivity"
    android:orientation="vertical"
    android:weightSum="10">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:layout_weight="1"
        android:layout_height="0dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_phone_number"
        android:layout_width="match_parent"
        android:hint="@string/phone_number"
        android:layout_weight="1"
        android:inputType="phone"
        android:maxLines="1"
        android:layout_height="0dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_blood_type"
        android:layout_width="match_parent"
        android:hint="@string/blood_type"
        android:layout_weight="1"
        android:inputType="phone"
        android:maxLines="1"
        android:layout_height="0dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/admin_name"
        android:layout_width="match_parent"
        android:hint="@string/admin_name"
        android:layout_weight="1"
        android:inputType="phone"
        android:maxLines="1"
        android:layout_height="0dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/admin_phone_number"
        android:layout_width="match_parent"
        android:hint="@string/admin_phone_number"
        android:layout_weight="1"
        android:inputType="phone"
        android:maxLines="1"
        android:layout_height="0dp"/>


    <Button
        android:id="@+id/ok_button"
        android:text="OK"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        />

</LinearLayout>