<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/register_admin"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="20dp"
        card_view:cardUseCompatPadding="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:gravity="center"
            android:textSize="30dp"
            android:text="@string/register_admin" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/registered_device_info"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:layout_marginTop="0dp"
        card_view:cardCornerRadius="20dp"
        card_view:cardUseCompatPadding="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:gravity="center"
            android:textSize="30dp"
            android:text="@string/registered_device_info" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/change_device_name"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:layout_marginTop="0dp"
        card_view:cardCornerRadius="20dp"
        card_view:cardUseCompatPadding="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:gravity="center"
            android:textSize="30dp"
            android:text="@string/change_device_name" />
    </androidx.cardview.widget.CardView>

</LinearLayout>