<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.user.UserStatusActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            card_view:cardCornerRadius="20dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/status_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:fontFamily="bold"
                    android:gravity="center"
                    android:text="@string/null_str"
                    android:textColor="@android:color/black"
                    android:textSize="40dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="20dp"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:text="@string/status_code" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="20dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ppo2_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:fontFamily="bold"
                android:gravity="center"
                android:text="@string/null_str"
                android:textColor="@android:color/black"
                android:textSize="40dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="20dp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/ppo2_description" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="20dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/temp_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:fontFamily="bold"
                android:gravity="center"
                android:text="@string/null_str"
                android:textColor="@android:color/black"
                android:textSize="40dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="20dp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/temperature_description" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="20dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/barometric_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:fontFamily="bold"
                android:gravity="center"
                android:text="@string/null_str"
                android:textColor="@android:color/black"
                android:textSize="40dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="20dp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/o2_pressure_description" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="20dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/o2_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:fontFamily="bold"
                android:gravity="center"
                android:text="@string/null_str"
                android:textColor="@android:color/black"
                android:textSize="40dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="20dp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/oxygen_concentration_description" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>